--- a/_talks/2021-07-19-conference-10.md
+++ b/_talks/2021-07-19-conference-10.md
@@ -8,13 +8,13 @@ date: 2021-07-19
 location: "Washington, USA"
 ---
 
-We propose a slight modification to the rolling shutter by shuffling the scanline mechanism to significantly improve its sampling ability to recover high speed videos from a single image using compressive reconstruction algorithms.
-
 [Download conference here](https://nelson10.github.io/NelsonDiaz.github.io/files/Conference10.pdf)
 
 [More information here](https://opg.optica.org/abstract.cfm?uri=FTS-2021-JTh6A.9)
 
-Recommended citation: F. Guzmán, N. Díaz, and E. Vera. "Improved Compressive Temporal Imaging using a Shuffled Rolling Shutter" <i>in OSA Optical Sensors and Sensing Congress 2021 (AIS, FTS, HISE, SENSORS, ES)</i>. (Optica Publishing Group, 2021), paper JTh6A.9.
+We propose a slight modification to the rolling shutter by shuffling the scanline mechanism to significantly improve its sampling ability to recover high speed videos from a single image using compressive reconstruction algorithms.
+
+Recommended citation: F. Guzmán, N. Díaz, and E. Vera. "Improved Compressive Temporal Imaging using a Shuffled Rolling Shutter," <i>in OSA Optical Sensors and Sensing Congress 2021 (AIS, FTS, HISE, SENSORS, ES),</i>. paper JTh6A.9.
 
 ```
 @inproceedings{Guzman:21,
