Update and rename 2012-08-14-blog-post-1.md to 2022-11-08-blog-post-1.md

--- a/_posts/2022-11-08-blog-post-1.md
+++ b/_posts/2022-11-08-blog-post-1.md
@@ -7,7 +7,7 @@ tags:
   - Optolab
 ---
 
-Optolab group participed this year at the 2nd International Workshop on Adaptive, Comprehensive and Computational Imaging, WACCI 2022 in Bucaramanga, Colombia.
+Optolab group participed this year at the 2nd International Workshop on Adaptive, Compressive and Computational Imaging – WACCI 2022, in Bucaramanga, Colombia.
 
 <br/><img src='/images/wacci2022.png'>
 Optolab group during the closing event in WACCI 2022 in Bucaramanga, Colombia.
