Update and rename 2019-08-14-blog-post-2.md to 2019-09-02-blog-post-2.md

--- a/_posts/2019-09-02-blog-post-2.md
+++ b/_posts/2019-09-02-blog-post-2.md
@@ -1,11 +1,12 @@
 ---
 title: '2019 27th European Signal Processing Conference (EUSIPCO)'
 date: 2019-09-02
-permalink: /posts/2013/08/blog-post-2/
+permalink: /posts/2019/09/blog-post-2/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - EUSIPCO
+  - Cardiac motion estimation
+  - Sparse representation
+  - Signal processing
 ---
 
 Attendance at EUSIPCO 2019 conference
